# mango

./: .gitignore  Cargo.toml  deny.toml  flake.nix  justfile
.github/workflows/: android.yml
.planning/: REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/21-memory-retrieval-injection/: 21-01-SUMMARY.md
.planning/phases/22-agent-tools-expansion/: 22-01-SUMMARY.md  22-02-SUMMARY.md
.planning/phases/23-memory-management-ui-agent-ui/: 23-01-PLAN.md  23-01-SUMMARY.md  23-02-PLAN.md  23-02-SUMMARY.md  23-03-PLAN.md  23-03-SUMMARY.md  23-VALIDATION.md
.planning/phases/24-redesign-settings-ux-move-memories-into-settings-redesign-layout-with-grouped-sections-add-tool-configuration-for-agents-and-chats/: 24-00-PLAN.md  24-01-PLAN.md  24-01-SUMMARY.md  24-02-PLAN.md  24-02-SUMMARY.md  24-CONTEXT.md  24-DISCUSSION-LOG.md  24-UI-SPEC.md  24-VALIDATION.md
.planning/phases/25-disable-enable-making-memories-in-the-app/: 25-01-SUMMARY.md  25-02-SUMMARY.md
android/: settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/dev/disobey/mango/: AppManager.kt  MainActivity.kt  (+2 more)
desktop/iced/: Cargo.toml
desktop/iced/src/: main.rs  theme.rs
desktop/iced/src/views/: agents.rs  chat.rs  documents.rs  home.rs  memories.rs  mod.rs  onboarding.rs  settings.rs
desktop/iced/src/widgets/: attestation_badge.rs  mod.rs
ios/Bindings/: mango_core.swift  mango_coreFFI.h  mango_coreFFI.modulemap
ios/Mango/: project.yml
ios/Mango/Mango/: AgentView.swift  AppColors.swift  AppManager.swift  AttestationBadgeView.swift  ChatView.swift  ComposeBarView.swift  ContentView.swift  ConversationListView.swift  DocumentLibraryView.swift  Info.plist  MangoApp.swift  MemoryManagementView.swift  MessageBubbleView.swift  MobileEmbeddingProvider.swift  ModelPickerView.swift  OnboardingView.swift  SettingsView.swift  SystemPromptView.swift  WordPieceTokenizer.swift
rust/: Cargo.toml  uniffi.toml
rust/src/: lib.rs
rust/src/agent/: loop.rs  mod.rs  tools.rs
rust/src/attestation/: cache.rs  endpoint.rs  error.rs  mod.rs  nonce.rs  nvidia.rs  policy.rs  task.rs  tdx.rs
rust/src/embedding/: desktop.rs  mod.rs
rust/src/llm/: backend.rs  error.rs  mod.rs  ppq_private.rs  router.rs  streaming.rs  tinfoil_secure.rs  transport.rs
rust/src/memory/: extract.rs  mod.rs  retrieve.rs
rust/src/net/: tls.rs
rust/src/persistence/: error.rs  mod.rs  queries.rs  schema.rs
rust/src/rag/: chunker.rs  context.rs  index.rs  mod.rs
rust/src/tests/: agent.rs  attestation_cache.rs  attestation_integration.rs  attestation_nvidia.rs  attestation_tdx.rs  attestation_types.rs  backend_config.rs  chat.rs  embedding_degradation.rs  error_mapping.rs  hpke_key_hygiene.rs  live_ppq_private.rs  live_tinfoil.rs  memory.rs  mod.rs  onboarding.rs  persistence.rs  rag.rs  routing.rs  settings.rs  streaming.rs  tee_policy.rs  transport.rs
(+16 files in other folders)
