[package]
name = "mango_core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
flume = "0.11"
uniffi = "0.29"

# Phase 2: Streaming LLM client
async-openai = { version = "0.33.1", features = ["chat-completion"] }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros"] }
tokio-util = { version = "0.7", features = ["rt"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"

# Phase 3: Attestation verification
dcap-qvl = "0.3"
sev = { version = "7.1", default-features = false, features = ["snp", "crypto_nossl"] }
rusqlite = { version = "0.39", features = ["bundled"] }
jsonwebtoken = "10"
rand = "0.8"
base64 = "0.22"
flate2 = "1"
hex = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-webpki-roots", "json"] }
rustls = "0.23"
sha2 = "0.10"
x509-cert = "0.2"
x509-parser = "0.17"
webpki-roots = "0.26"
hpke = { version = "0.13", default-features = false, features = ["alloc", "x25519"] }
aes-gcm = "0.10"
hkdf = "0.12"
zeroize = { version = "1", features = ["derive"] }

# Phase 4: Persistence layer
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }

# Debug logging
log = "0.4"
env_logger = "0.11"

# Phase 8: Local RAG
fastembed = { version = "5.13.0", default-features = false, features = ["ort-download-binaries-rustls-tls", "hf-hub-rustls-tls", "image-models"] }
# ort 2.0.0-rc.11: no stable 2.x exists (1.x yanked); fastembed 5.13.0 pins =rc.11 exactly.
# CLAUDE.md recommends rc.12 but fastembed 5.13.0 pins =rc.11; rc.12 requires api-24 feature
# and no compatible fastembed version exists yet (DFNS-03).
ort = { version = "2.0.0-rc.11", default-features = false }
usearch = "2.24.0"
pdf-extract = "0.10.0"
once_cell = "1"

# Phase 22: Agent tools expansion
scraper = "0.26"
evalexpr = "13.1"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.14"

[target.'cfg(not(any(target_os = "ios", target_os = "android")))'.dependencies]
keyring = { version = "3.6", features = ["apple-native", "linux-native", "windows-native"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
tempfile = "3"

[build-dependencies]
uniffi = { version = "0.29", features = ["build"] }
