[package]
name = "mango-desktop"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
mango_core = { path = "../../rust" }
iced = { version = "0.14", features = ["tokio", "markdown", "highlighter", "lazy"] }
flume = "0.11"
rfd = "0.15"
tokio = { version = "1", features = ["rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
